[project]
name = "algo_utils"
version = "0.1.0"
description = "Utilities for testing different algorithms in the University of Tartu Algorithmics course."
authors = [ {name="FooKaDoO",email=""} ]
readme = "README.md"
requires-python = ">=3.7"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
compatibility = "linux"
sdist-include = ["README.md"]